<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:gravity="center" android:layout_height="fill_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:orientation="vertical" android:layout_weight="1" android:gravity="center" android:layout_height="fill_parent" android:layout_width="fill_parent" android:padding="5dip">
        <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/rotator" android:id="@+id/login_asterisk_image"></ImageView>
        <ImageView android:id="@+id/imageView2" android:layout_gravity="center_horizontal" android:padding="10dip" android:layout_width="wrap_content" android:src="@drawable/logocaps" android:layout_height="wrap_content"></ImageView>
        <EditText android:inputType="textVisiblePassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center" android:hint="@string/username" android:id="@+id/diaspora_id"></EditText>
        <EditText android:inputType="textPassword" android:layout_width="fill_parent" android:layout_height="wrap_content" android:id="@+id/editText2" android:gravity="center" android:hint="@string/password"></EditText>
        <LinearLayout android:id="@+id/LinearLayout01" android:layout_width="fill_parent" android:gravity="center_horizontal" android:layout_height="wrap_content">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:width="30dip" android:visibility="invisible"></TextView>
            <Button android:textStyle="bold" android:text="@string/cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/cancel"></Button>
            <Button android:textStyle="bold" android:text="@string/login_button_label" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:id="@+id/signin"></Button>
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:width="30dip" android:visibility="invisible"></TextView>
        </LinearLayout>
        <CheckBox android:id="@+id/checkBox1" android:text="@string/rememberme" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20dip"></CheckBox>
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:text="@string/copyright" android:padding="5dip" android:typeface="sans"></TextView>
</LinearLayout>
